--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.22",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "vercel": "^30.2.1"
   }
 }
