--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-STAGE=PRODUCTION
+STAGE=DEVELOPMENT
 PORT=3001
 DB_URI=mongodb+srv://ghaninf:i5i0LoRHLDftJdod@cluster0.efmjix8.mongodb.net/
 DB_IMAGE=test
