--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
-    "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.22",
     "sha1": "^1.1.1",
     "vercel": "^30.2.1"
